--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
     <title></title>
     <script defer src="script.js"></script>
   </head>
-  <body></body>
+  <body>
+    <h1>To-Do List</h1>
+    <!--Form with validation-->
+    <form>
+
+    </form>
+  </body>
 </html>
