Added inputs to form

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <h1>To-Do List</h1>
     <!--Form with validation-->
     <form>
-
+        <input type="text" id="taskInput" placeholder="Add a new task!" required>
+        <button type="submit">Add Task</button>
     </form>
   </body>
 </html>
