Added "taskList" ul to html

--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
         <input type="text" id="taskInput" placeholder="Add a new task!" required>
         <button type="submit">Add Task</button>
     </form>
+    <!--List-->
+    <ul id="taskList"></ul>
   </body>
 </html>
