--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
     <script defer src="script.js"></script>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <h1>To-Do List</h1>
     <!--Form with validation-->
     <form>
-        <input type="text" id="taskInput" placeholder="Add a new task!" required>
-        <button type="submit">Add Task</button>
+      <input
+        type="text"
+        id="taskInput"
+        placeholder="Add a new task!"
+        required
+      />
+      <button type="submit">Add Task</button>
     </form>
     <!--List-->
     <ul id="taskList"></ul>
