--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
+    <link rel="stylesheet" href="styles.css" />
     <script defer src="script.js"></script>
-    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <h1>To-Do List</h1>
@@ -20,6 +20,8 @@
       <button type="submit">Add Task</button>
     </form>
     <!--List-->
-    <ul id="taskList"></ul>
+    <ul id="taskList">
+      
+    </ul>
   </body>
 </html>
